# foundry-ai-gateway-lab

./: .env.example  .gitignore  AZURE_SETUP.md  README.md  TROUBLESHOOTING.md  USAGE.md  agent-coordinator.py  agent-gpt.py  agent-mistral.py  foundry_foundation.py  pyproject.toml  workflow-agent.py
.github/: copilot-instructions.md
agents/: agent-deepseek.py  workflow-agent.py
direct-access/: README.md
direct-access/demos/: _client.py  access_matrix.py
direct-access/docs/: portal-codex-walkthrough.md  portal-setup.md
direct-access/infra/: main.bicep
direct-access/policies/: backend-fragment.xml  codex.xml  gpt52.xml  mistral.xml  responses-backend-fragment.xml
gateway/: README.md
gateway/demos/: _client.py  content_safety.py  custom_policy.py  logging_dashboard.py  semantic_cache.py  storyteller_via_gateway.py  token_limit.py  token_metrics.py
gateway/docs/: portal-setup.md
gateway/infra/: main.bicep  redis-managed.bicep  redis.bicep
gateway/policies/: backend-fragment.xml  base.xml  content-safety.xml  custom-policy.xml  semantic-cache.xml  token-limit.xml
tests/: conftest.py  test_foundation.py  test_workflow_definition.py
